# roteirizacao

./: .env  README.md  _types.py  distribuicao_tarefas.csv  example1.py  example2.py  example3.py  exemplo_esforco_maximo.py  exemplo_prioridade_maxima.py  grafico_gantt.py  graficos.py  greedy_prioridade_balanceamento.py  main.py  main_2.py  main_3.py  prompty.txt  pyproject.toml  saida_greedy_prioridade_balanceamento.csv
data/: analise_resultado.xlsx  distribuicao_tarefas_prioridade_maxima.csv  prd_rot_recursos.csv  prd_rot_tarefas.csv  ~$analise_resultado.xlsx
output/: distribuicao_tarefas_esforco_maximo.csv  distribuicao_tarefas_prioridade_maxima.csv
