[project]
name = "roteirizacao-escritorio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools",
    "pandas>=2.3.1",
    "prefect>=3.4.13",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "python-dotenv>=1.1.1",
]
